--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -2,19 +2,11 @@ github_users:
   - 338rajesh
 
 github_repos:
+  - 338rajesh/gbox
+  - 338rajesh/MakeAbaqusInputFile.jl
   - 338rajesh/mpi-cnn
   - 338rajesh/FEPreProcessing.jl
   - 338rajesh/UnitCellModelling.jl
-  - 338rajesh/MakeAbaqusInputFile.jl
-  - 338rajesh/ucplots
   - 338rajesh/my-code-snippets
   - 338rajesh/gmsh.jl
-  - 338rajesh/geometry_box
-  
-  # - twbs/bootstrap
-  # - jekyll/jekyll
-  # - jquery/jquery
-  # - FortAwesome/Font-Awesome
-  # - jpswalsh/academicons
-  # - mathjax/MathJax
  
